[package]
name = "async-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dashmap = "6.1.0"
bytes = "1.10.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.51.1", features = ["full"] }

[[bench]]
name = "publish_path"
harness = false
